# agent-zero

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
examples/: README.md
examples/basic/: getting_started.py  model_comparison.py  simple_conversation.py  stream_conversation.py  stream_conversation_anthropic.py  stream_responses.py  tool_usage.py
src/: Agent.py  AgentManager.py  AgentZero.py  Container.py  Model.py  Workflow.py  WorkflowManager.py  __init__.py  utils.py
src/agentflow/: Agent.py  AgentManager.py  Container.py  Workflow.py  WorkflowManager.py  __init__.py  utils.py
src/models/: Anthropic.py  DeepSeek.py  Genai.py  Grok.py  Llama.py  OpenAi.py  __init__.py
tests/: test_agent.py  test_agent_manager.py  test_agent_zero.py  test_anthropic_model.py  test_container.py  test_deepseek_model.py  test_genai_model.py  test_grok_model.py  test_llama_model.py  test_model.py  test_openai_model.py  test_utils.py  test_workflow.py  test_workflow_manager.py
